tests/conformance/typecheck/invalid/undefined_variable.ks
// EXPECT: Unknown variable
// Undefined variable
val x = y + 1
